InsuranceOrg/force-app/main/default/objects/vlocity_ins__OrchestrationDependencyDefinition__c/vlocity_ins__OrchestrationDependencyDefinition__c.object-meta.xml
<CustomObject>
    <label>Orchestration Dependency Definition</label>
    <nameField>
        <label>Dependency Definition Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Orchestration Dependency Definitions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>