InsuranceOrg/force-app/main/default/objects/vlocity_ins__OrchestrationDependencyDefinition__c/fields/vlocity_ins__DependencyItemDefinitionId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__DependencyItemDefinitionId__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Dependency Item Definition</label>
    <referenceTo>vlocity_ins__OrchestrationItemDefinition__c</referenceTo>
    <relationshipLabel>Related Orchestration Items</relationshipLabel>
    <relationshipName>RelatedOrchestrationItems</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>