InsuranceOrg/force-app/main/default/objects/vlocity_ins__OrchestrationDependencyDefinition__c/fields/vlocity_ins__DependencyPlanDefinitionId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__DependencyPlanDefinitionId__c</fullName>
    <formula>vlocity_ins__DependencyItemDefinitionId__r.vlocity_ins__OrchestrationPlanDefinitionId__c</formula>
    <label>Dependency Plan Definition</label>
    <type>Text</type>
</CustomField>