InsuranceOrg/force-app/main/default/objects/vlocity_ins__OrchestrationDependencyDefinition__c/fields/vlocity_ins__OrchestrationItemDefinitionId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__OrchestrationItemDefinitionId__c</fullName>
    <label>Orchestration Item Definition</label>
    <referenceTo>vlocity_ins__OrchestrationItemDefinition__c</referenceTo>
    <relationshipLabel>Orchestration Dependency Definitions</relationshipLabel>
    <relationshipName>OrchestrationDependencyDefinitions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>