InsuranceOrg/force-app/main/default/objects/vlocity_ins__OrchestrationDependencyDefinition__c/fields/vlocity_ins__OrchestrationPlanDefinition__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__OrchestrationPlanDefinition__c</fullName>
    <formula>IF(  vlocity_ins__OrchestrationItemDefinitionId__r.vlocity_ins__OrchestrationPlanDefinitionId__c !=null &amp;&amp;  vlocity_ins__OrchestrationItemDefinitionId__r.vlocity_ins__OrchestrationPlanDefinitionId__c !=&apos;&apos;,  HYPERLINK(&apos;/&apos;&amp;vlocity_ins__OrchestrationItemDefinitionId__r.vlocity_ins__OrchestrationPlanDefinitionId__c, vlocity_ins__OrchestrationItemDefinitionId__r.vlocity_ins__OrchestrationPlanDefinitionId__r.Name) ,
 null)</formula>
    <label>Orchestration Plan Definition</label>
    <type>Text</type>
</CustomField>