InsuranceOrg/force-app/main/default/objects/vlocity_ins__OrchestrationDependencyDefinition__c/validationRules/vlocity_ins__CircularDependencyValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>vlocity_ins__CircularDependencyValidation</fullName>
    <active>true</active>
    <description>Orchestration Item Definition and Dependency Item Definition cannot have same value.</description>
    <errorConditionFormula>vlocity_ins__DependencyItemDefinitionId__c  =  vlocity_ins__OrchestrationItemDefinitionId__c</errorConditionFormula>
    <errorMessage>Orchestration Item Definition and Dependency Item Definition cannot have same value.</errorMessage>
</ValidationRule>